--- a/templates/index.html
+++ b/templates/index.html
@@ -15,13 +15,12 @@
 
 <body style="background-color: rgba(78, 78, 80, 1);">
     <div class="header">
-        <nav class="navbar navbar-expand-lg" style="background-color: rgba(26, 26, 29, 1)">
+        <nav class="navbar f navbar-expand-lg" style="background-color: rgba(26, 26, 29, 1)">
             <div class="container d-flex justify-content-between col-10 ">
                 <p class="logo">Task Manager</p>
                 <div class="image-container">
                     <img src="/images/heart.png" width="45" height="45" class="dropdown-trigger">
                     <div class="dropdown-content">
-                        <a href="/html/help_0.html">Помощь</a>
                         <a href="https://t.me/rupollya">Telegram</a>
                     </div>
                 </div>
@@ -50,11 +49,12 @@
                         <div class="invalid-feedback" style="font-size: 14px;">Пароль должен содержать не менее 8
                             символов!</div>
                     </div>
-                    <div class="link"><a href="/html/registration.html" style="color:rgba(195, 7, 63, 1);">Зарегистрироваться</a>
+                    <div class="link">
+                        <a href="/registration.html" style="color:rgb(66, 62, 63);">Зарегистрироваться</a>
                     </div>
 
                     <div class="button-container d-flex justify-content-end">
-                        <button type="button" class="button_regis" onclick="checkLogin(event)">Войти</button>
+                        <button type="button" class="button_regis b_c" onclick="checkLogin(event)">Войти</button>
                     </div>
 
                 </form>
