--- a/templates/registration.html
+++ b/templates/registration.html
@@ -21,7 +21,6 @@
                 <div class="image-container">
                     <img src="/images/heart.png" width="45" height="45" class="dropdown-trigger">
                     <div class="dropdown-content">
-                        <a href="/html/help_1.html">Помощь</a>
                         <a href="https://t.me/rupollya">Telegram</a>
                     </div>
                 </div>
@@ -50,11 +49,11 @@
                         <div class="invalid-feedback" style="font-size: 14px;">Пароль должен содержать не менее 8
                             символов!</div>
                     </div>
-                    <div class="link"><a href="index.html" style="color:rgba(195, 7, 63, 1);">Уже есть аккаунт</a>
+                    <div class="link"><a href="/" style="color:rgb(70, 61, 64);">Уже есть аккаунт</a>
                     </div>
 
                     <div class="button-container d-flex justify-content-end">
-                        <button type="button" class="button_regis" onclick="checkRegis(event)">Принять</button>
+                        <button type="button" class="button_regis b_r" onclick="checkRegis(event)">Принять</button>
                     </div>
 
                 </form>
