--- a/static_css/task.css
+++ b/static_css/task.css
@@ -26,7 +26,7 @@
 
 
 .tasksContainer {
-    max-height: 550px;
+    max-height: 450px;
     overflow-y: auto;
     border: none;
     scrollbar-width: none;
@@ -42,43 +42,13 @@
     cursor: pointer;
 }
 
-
-
 .heading_3 {
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-    background-color: rgba(195, 7, 63, 1);
-    color: white;
-    width: 100%;
+    color: rgb(235, 226, 226);
     border-radius: 10pt;
     font-size: 18px;
-
     border-radius: 10pt;
     padding: 5px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 }
-
-.date_3 {
-    margin: auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 20px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    width: 95%;
-    font-size: 14px;
-
-    border-radius: 10pt;
-    padding: 5px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-}
-
-
-
 
 .textarea_3 {
     margin-top: 10px;
@@ -86,11 +56,11 @@
     border: none;
     outline: none;
     width: 100%;
-    height: 250px;
+    height: 200px;
     border-radius: 10pt;
     font-size: 13px;
     scrollbar-width: none;
-    border: 3px solid rgb(204, 38, 88);
+    border: 3px solid  #908b8b;
     -ms-overflow-style: none;
 }
 
@@ -105,12 +75,12 @@
     border-radius: 10pt;
     font-size: 13px;
     scrollbar-width: none;
-    border: 3px solid rgb(204, 38, 88);
+    border: 3px solid  #908b8b;
     -ms-overflow-style: none;
 }
 
 .prize_text {
     font-size: 20px;
-    color: rgb(216, 37, 91);
+    color:  #0b0101;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.3);
 }
