--- a/static_css/task_plus.css
+++ b/static_css/task_plus.css
@@ -1,33 +1,37 @@
 .new_task{
-    display:flex;
-    align-items: center;
-    justify-content: center;
     font-size: 22px;
-    background-color:  rgba(195, 7, 63, 1);
     border-radius: 20px;
     padding: 5px;
-    max-width: 400px;
-    margin: auto;
+     
+
     margin-bottom: 15px;
     color: white;
 }
 #heading {
+    opacity: 0.8;
+    margin-top: 5px;
+    margin-left: 10px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 30px;
-    border: 2px solid rgb(204, 38, 88);
+    border-radius: 10px;
+    border: 1px solid rgb(55, 50, 52);
+    width: 300px;
+    height: 35px;
 }
 #textarea {
+    background-color: rgba(255, 255, 255, 0.5); 
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 30px;
-    border: 2px solid rgb(204, 38, 88);
+    border-radius: 10px;
+    border: 1px solid rgb(55, 50, 52);
     max-height: 100%;
     height: 450px;
     resize: none; 
+    color: black;
 }
 #prize {
+    background-color: rgba(255, 255, 255, 0.811); 
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 20px;
-    border: 2px solid rgb(204, 38, 88);
+    border-radius: 13px;
+    border: 2px solid  rgb(55, 50, 52);
     max-height: 100%;
     height: 100px;
     resize: none;
@@ -41,7 +45,7 @@
     font-size: 20px;
 }
 .line{
-    background-color: rgb(204, 38, 88);
+    background-color: rgb(55, 50, 52);  
     height: 5px;
     width: 260px;
     border-radius: 30px;
@@ -56,3 +60,6 @@
 .sss{
     visibility: hidden;
   }
+
+
+ 
