--- a/templates/registration.html
+++ b/templates/registration.html
@@ -29,37 +29,37 @@
     </div>
 
     <div class="main">
-
         <div class="wrapper">
             <section class="form signup">
-                <header ALIGN="center">Регистрация</header>
-                <form>
-                    <div class="error-text"></div>
-
-                    <div class="field input ">
-                        <label class="col-2">Логин:</label>
-                        <input type="text" name="login" id="login" class="form-control" placeholder="your username"
-                            required maxlength="10">
-                        <div class="invalid-feedback" style="font-size: 14px;">Заполните это поле!</div>
-                    </div>
+                <header align="center">Регистрация</header>
+                <form method="POST" action="/registration" novalidate>
                     <div class="field input">
-                        <label class="col-2">Пароль:</label>
-                        <input type="password" name="password" id="password" class="form-control"
-                            placeholder="your password" required maxlength="16">
-                        <div class="invalid-feedback" style="font-size: 14px;">Пароль должен содержать не менее 8
-                            символов!</div>
+                        <label for="login" class="col-2">Логин:</label>
+                        <input type="text" name="login" id="login" class="form-control" placeholder="your username" required maxlength="10" value="{{ login }}">
+                        {% if form_errors.login %}
+                            <div class="invalid-feedback d-block">{{ form_errors.login }}</div>
+                        {% endif %}
                     </div>
-                    <div class="link"><a href="/" style="color:rgb(70, 61, 64);">Уже есть аккаунт</a>
+                
+                    <div class="field input">
+                        <label for="password" class="col-2">Пароль:</label>
+                        <input type="password" name="password" id="password" class="form-control" placeholder="your password" required minlength="8" maxlength="16">
+                        {% if form_errors.password %}
+                            <div class="invalid-feedback d-block">{{ form_errors.password }}</div>
+                        {% endif %}
                     </div>
-
+                
+                    <div class="link"><a href="/" style="color:rgb(70, 61, 64);">Уже есть аккаунт</a></div>
+                
                     <div class="button-container d-flex justify-content-end">
-                        <button type="button" class="button_regis b_r" onclick="checkRegis(event)">Принять</button>
+                        <button type="submit" class="button_regis b_r">Принять</button>
                     </div>
-
                 </form>
-
+                
+                
             </section>
         </div>
+
     </div>
     <script src="/js/auth_regis.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
